fixed alignment issues with weather pop up and sidebar in the main dashboard

--- a/client/src/style/Dashboard.css
+++ b/client/src/style/Dashboard.css
@@ -8,27 +8,35 @@
 
 .dashboard {
     display: flex;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    min-height: 100vh;
-    min-width: 100%;
 }
 
 .map-wrapper-main {
     display: flex;
+    height: 100vh;
+    width: 100vw;
+    z-index: 0;
+}
+
+.sidebar-wrapper {
+    z-index: 9;
+    position: absolute;
 }
 
 .map-weather-wrapper {
     position: relative;
+    height: 100vh;
+    width: 100vw;
 }
 
 .map-container,
 .weather-container {
     position: absolute;
-    left: 0;
+    right: 0;
 }
 
 .sidebar-container {
@@ -109,49 +117,52 @@
 .bottom {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 .map-container {
     height: 100vh;
-    width: 82vw;
+    width: 100vw;
 }
 
 .weather-container {
-    z-index: 10;
-    bottom: 0;
+    z-index: 8;
     background-color: var(--background-transparent);
     color: var(--primary);
     font-size: 20px;
     font-weight: bold;
-    width: 82vw;
-    height: 300px;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.weather-container p {
-    padding-left: 1vw;
-    padding-right: 1vw;
-    width: fit-content;
+.weather-content-wrapper {
+    width: 50vw;
+    block-size: fit-content;
 }
 
 .weather-title {
+    text-align: center;
+    /* padding-left: 1vw;
+    padding-right: 1vw;
+    width: fit-content;
     margin-top: 0.5vh;
     margin-left: 0.5vw;
     border: 1px solid var(--primary);
-    border-radius: 5px;
+    border-radius: 5px; */
 }
 
 .weather-items-wrapper {
     display: flex;
-    margin: 1vh;
-    align-items: center;
-    justify-content: center;
+    justify-content: center;  
 }
 
-.weather-items,
-.weather-items-today {
+.weather-items {
     display: flex;
-    margin: 0.5em 1em;
     overflow: hidden;
 }
 
